--- a/src/examples/drag-and-drop/index.html
+++ b/src/examples/drag-and-drop/index.html
@@ -4,48 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<style>
-			.draggable {
-				cursor: pointer;
-			}
-			.dragging-effect {
-				background-color: lightblue;
-			}
-			.section-hover {
-				background-color: #f7eff0;
-			}
-			.side-picker--teams, .side-picker--bench {
-				display: flex;
-				flex-direction: row; 
-				justify-content: flex-start; 
-				align-items: flex-start;
-				width: 50%;
-			}
-			.side-picker--bench {
-				align-items: center;
-			}
-			.side-picker--teams section, .side-picker--bench section {
-				width: 50%;
-				border: solid 1px #eee;
-				/* maintain same height even when section is empty */
-				min-height: 100px;
-			}
-			.side-picker--teams section header, .side-picker--bench section header {
-				position: relative;
-				left: 50%;
-				margin-left: auto;
-			}
-			ol.side-picker--players li {
-				list-style-type: none;
-				display: inline-block;
-				width: 20%;
-				height: 50px;
-			}
-	</style>
+	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 	<p>
-		To spin up, use: <strong>tcs -w</strong>
+		To spin up, use: <strong>tsc -w</strong>
 	</p>
 	<div data-controller="side-picker" class="side-picker">
 
@@ -76,11 +39,8 @@
 		</article>
 
 	</div>
-	<!-- <script src="./dist/app.js"></script> -->
+	<script src="../../../dist/stimulite.js"></script>
+	<script src="../../polyfills/drag-and-drop.js"></script>
 	<script src="./app.js"></script>
-	<script src="./polyfills.js"></script>
-
-
 </body>
 </html>
-
