--- a/src/examples/presentation/index.html
+++ b/src/examples/presentation/index.html
@@ -7,19 +7,16 @@
 	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
 	<section class="slideshow" data-controller="season-gallery">
+		<button class="close-presentation-button">X</button>
 		<article class="slides intro-slide">
 			<div class="slide slide1">
-				<h1>2 Teams</h1>
+				<h1>25 Players</h1>
 			</div>
 			<div class="slide slide2">
 				<h1>10 Matches</h1>
 			</div>
 			<div class="slide slide3">
-				<h1>25 Players</h1>
-			</div>
-			<div class="slide slide4">
 				<h1>1 Season</h1>
 			</div>
 		</article>
@@ -27,30 +24,31 @@
 		<article class="slides stats-slide">
 			<div class="flex__row">
 				<div class="slide flex__col slide5">
-					<h1>Flat Football</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-flat-football.jpg" width="200px">
-					<h1>Fred Flintstone</h1>
+					<h1 class="top">Season Champions!</h1>
+					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-team.jpg" >
+					<h1 class="bot">Whites</h1>
 				</div>
 				<div class="slide flex__col slide6">
-					<h1>Golden Boot</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-golden-boot.jpg" width="200px">
-					<h1>Wilma Flintstone</h1>
+					<h1 class="top">Golden Boot</h1>
+					<img alt="The golden boot award" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-golden-boot.jpg" >
+					<h1 class="bot">Wilma Flintstone</h1>
 				</div>
 			</div>
-				
+			
 			<div class="flex__row">
 				<div class="slide flex__col slide7">
-					<h1>Most Valuable Player</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-mvp.jpg" width="200px">
-					<h1>Barney Rubble</h1>
+					<h1 class="top">Most Valuable Player</h1>
+					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-mvp.jpg" >
+					<h1 class="bot">Barney Rubble</h1>
 				</div>
 				<div class="slide flex__col slide8">
-					<h1>Most Valuable Player</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-team.jpg" width="200px">
-					<h1>Barney Rubble</h1>
+					<h1 class="top">Flat Football</h1>
+					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-flat-football.jpg" >
+					<h1 class="bot">Barney Rubble</h1>
 				</div>
 			</div>				
 		</article>
+		<audio><source src="./woosh.mp3"></source></audio>
 	</section>
 
 </div>
