--- a/src/examples/presentation/index.html
+++ b/src/examples/presentation/index.html
@@ -25,12 +25,12 @@
 			<div class="flex__row">
 				<div class="slide flex__col slide5">
 					<h1 class="top">Season Champions!</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-team.jpg" >
+					<img alt="A flat football" width="300px" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-team.jpg" >
 					<h1 class="bot">Whites</h1>
 				</div>
 				<div class="slide flex__col slide6">
 					<h1 class="top">Golden Boot</h1>
-					<img alt="The golden boot award" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-golden-boot.jpg" >
+					<img alt="The golden boot award" width="300px" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-golden-boot.jpg" >
 					<h1 class="bot">Wilma Flintstone</h1>
 				</div>
 			</div>
@@ -38,13 +38,13 @@
 			<div class="flex__row">
 				<div class="slide flex__col slide7">
 					<h1 class="top">Most Valuable Player</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-mvp.jpg" >
+					<img alt="A flat football" width="300px" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-mvp.jpg" >
 					<h1 class="bot">Barney Rubble</h1>
 				</div>
 				<div class="slide flex__col slide8">
 					<h1 class="top">Flat Football</h1>
-					<img alt="A flat football" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-flat-football.jpg" >
-					<h1 class="bot">Barney Rubble</h1>
+					<img alt="A flat football" width="300px" src="https://120030-dot-toe-poke.appspot.com/img/jpg/season-award-flat-football.jpg" >
+					<h1 class="bot">Bam Bam</h1>
 				</div>
 			</div>				
 		</article>
