dev: Experimenting with js objects attached to elements

--- a/src/examples/drag-and-drop/index.html
+++ b/src/examples/drag-and-drop/index.html
@@ -10,20 +10,20 @@
 	<p>
 		To spin up, use: <strong>tsc -w</strong>
 	</p>
-	<div data-controller="side-picker" class="side-picker">
+	<div data-controller="side-picker">
 
 		<article class="side-picker--teams">
 			<section class="team">
-				<header data-team-id="side-a">Whites</header>
-				<ol data-team-id="whites" class="side-picker--players">
+				<header>Whites</header>
+				<ol data-team-id="side-1" data-team-name="Whites" class="side-picker--players">
 					<li data-player-id="1">Walter</li>
 					<li data-player-id="2">William</li>
 				</ol>
 			</section>
 
 			<section class="team">
-				<header data-team-id="side-b">Colours</header>
-				<ol data-team-id="colours" class="side-picker--players">
+				<header>Colours</header>
+				<ol data-team-id="side-2" data-team-name="Colours" class="side-picker--players">
 					<li data-player-id="3">Colin</li>
 				</ol>
 			</section>
@@ -31,8 +31,8 @@
 
 		<article class="side-picker--bench">
 				<section class="team">
-				<header data-team-id="bench">Bench</header>
-				<ol data-team-id="bench" class="side-picker--players">
+				<header>Bench</header>
+				<ol data-team-id="side-0" data-team-name="Bench" class="side-picker--players">
 					<li data-player-id="4">Ben</li>
 				</ol>
 			</section>
