feat: Button state on player move: When player is dragged to another team, the player team selection buttons will show or hide as appropriate.

--- a/src/examples/drag-and-drop/index.html
+++ b/src/examples/drag-and-drop/index.html
@@ -13,26 +13,26 @@
 	<div data-controller="side-picker">
 
 		<article class="side-picker--teams">
-			<section class="team">
+			<section class="team whites">
 				<header>Whites</header>
 				<ol data-team-id="side-1" data-team-name="Whites" class="side-picker--players">
-					<li data-player-id="1">Walter</li>
-					<li data-player-id="2">William</li>
 				</ol>
 			</section>
 
-			<section class="team">
+			<section class="team colours">
 				<header>Colours</header>
 				<ol data-team-id="side-2" data-team-name="Colours" class="side-picker--players">
-					<li data-player-id="3">Colin</li>
 				</ol>
 			</section>
 		</article>
 
 		<article class="side-picker--bench">
-			<section class="team">
+			<section class="team bench">
 				<header>Bench</header>
 				<ol data-team-id="side-0" data-team-name="Bench" class="side-picker--players">
+					<li data-player-id="1">Walter</li>
+					<li data-player-id="2">William</li>
+					<li data-player-id="3">Colin</li>
 					<li data-player-id="4">Ben</li>
 				</ol>
 			</section>
