--- a/src/examples/drag-and-drop/index.html
+++ b/src/examples/drag-and-drop/index.html
@@ -15,13 +15,13 @@
 		<article class="side-picker--teams">
 			<section class="team whites">
 				<header>Whites</header>
-				<ol data-team-id="side-1" data-team-name="Whites" class="side-picker--players">
+				<ol data-team-id="1" data-team-name="Whites" class="side-picker--players">
 				</ol>
 			</section>
 
 			<section class="team colours">
 				<header>Colours</header>
-				<ol data-team-id="side-2" data-team-name="Colours" class="side-picker--players">
+				<ol data-team-id="2" data-team-name="Colours" class="side-picker--players">
 				</ol>
 			</section>
 		</article>
@@ -29,7 +29,7 @@
 		<article class="side-picker--bench">
 			<section class="team bench">
 				<header>Bench</header>
-				<ol data-team-id="side-0" data-team-name="Bench" class="side-picker--players">
+				<ol data-team-id="0" data-team-name="Bench" class="side-picker--players">
 					<li data-player-id="1">Walter</li>
 					<li data-player-id="2">William</li>
 					<li data-player-id="3">Colin</li>
